# factory-boy-demystified

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  manage.py  pyproject.toml
fbd/: asgi.py  settings.py  urls.py  wsgi.py
fbd/championship/: factories.py  models.py
fbd/championship/migrations/: 0001_squashed_0002_auto_20200326_2306.py  0001_squashed_0002_auto_20200410_2314.py
